--- a/css/launchpad.css
+++ b/css/launchpad.css
@@ -10,6 +10,9 @@
   flex-direction: column;
   align-items: center;
   padding-top: 40px;
+  padding-bottom: 80px;
+  overflow-y: auto;
+  overflow-x: hidden;
   animation: fadeIn 0.25s ease;
 }
 
